k8s/kustomize/base/app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-project-app2
  labels:
    app: python-project-app2
spec:
  selector:
    app: python-project-app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
